[tool.poetry]
name = "air-sdk"
version = "2.8.1"
description = "Python SDK for interacting with NVIDIA Air"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
homepage = "https://github.com/NVIDIA/air_sdk"
authors = ["NVIDIA Air <air-support@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
python-dateutil = "2.8.2"
requests = "2.31.0"

# Optional extras for development
coverage = { version = "7.2.7", optional = true}
pre-commit = {version = "2.21", optional = true}
pytest = { version = "7.4.0", optional = true}
requests-mock = { version = "1.11.0", optional = true}
ruff = { version = "0.1.7", optional = true}

[tool.poetry.extras]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "requests_mock",
    "ruff",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/NVIDIA/air_sdk/issues"
"Bug Tracker" = "https://github.com/NVIDIA/air_sdk/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
