[tool.poetry]
name = "air-sdk"
version = "2.12.1"
description = "Python SDK for interacting with NVIDIA Air"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
homepage = "https://github.com/NVIDIA/air_sdk"
authors = ["NVIDIA Air <air-support@nvidia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.9.0"
requests = "^2.32.3"

# Optional extras for development
coverage = { version = "7.5.4", optional = true }
pre-commit = { version = "2.21", optional = true }
pytest = { version = "7.4.4", optional = true }
requests-mock = { version = "1.12.1", optional = true }
ruff = { version = "0.5.0", optional = true }

[tool.poetry.extras]
dev = [
    "coverage",
    "pre-commit",
    "pytest",
    "requests_mock",
    "ruff",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/NVIDIA/air_sdk/issues"
"Bug Tracker" = "https://github.com/NVIDIA/air_sdk/issues"

[tool.pytest.ini_options]
testpaths = [
    "tests/*"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
